--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -352,6 +352,7 @@
   // font-weight: 800;
   font-size: max(12px, 1.5dvmin);
   overflow: hidden;
+  font-weight: 700;
   @include v.res("sp") {
     font-size: 2.8dvmin;
   }
