--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -180,6 +180,14 @@ select {
   background-color: #ffffff;
 }
 
+.blue {
+  color: #1955a6;
+}
+
+.green {
+  color: #108786;
+}
+
 .navy {
   color: #374466;
 }
