--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -49,8 +49,11 @@
 
 .border {
   border-style: solid;
-  border-width: 34px;
+  border-width: 2vw;
   box-sizing: border-box;
+  @include v.res("sp") {
+    border-width: 4vw;
+  }
 }
 // mainvisual
 
@@ -240,11 +243,14 @@
 
 .link_year {
   display: flex;
-  width: 25vw;
-  height: 25vw;
+  width: 100vw;
+  height: 4.5vw;
+  // width: 25vw;
+  // height: 25vw;
   @include v.res("sp") {
-    width: 50vw;
-    height: 50vw;
+    height: 9vw;
+    // width: 50vw;
+    // height: 50vw;
   }
 }
 
@@ -303,10 +309,10 @@
 .link_head {
   display: flex;
   width: 100vw;
-  height: 12.5vw;
+  height: 10vw;
   @include v.res("sp") {
     width: 100vw;
-    height: 25vw;
+    height: 20vw;
   }
 }
 
@@ -326,7 +332,8 @@
   color: v.$white;
   background-color: v.$navy;
   font-weight: 400;
-  font-size: max(16px, 2dvmin);
+  // font-size: max(16px, 2dvmin);
+  font-size: 2.5dvmin;
   @include v.res("sp") {
     font-size: 3.5dvmin;
   }
@@ -338,7 +345,8 @@
   color: v.$navy;
   background-color: v.$white;
   font-weight: 1000;
-  font-size: max(16px, 1.8dvmin);
+  // font-size: max(16px, 1.8dvmin);
+  font-size: 2.5dvmin;
   @include v.res("sp") {
     font-size: 3.5dvmin;
   }
@@ -350,7 +358,8 @@
   color: v.$navy;
   background-color: v.$white;
   // font-weight: 800;
-  font-size: max(12px, 1.5dvmin);
+  // font-size: max(12px, 1.5dvmin);
+  font-size: 1.5dvmin;
   overflow: hidden;
   font-weight: 400;
   @include v.res("sp") {
@@ -397,6 +406,6 @@
   font-size: 12px;
   font-size: max(12px, 1.5dvmin);
   @include v.res("sp") {
-    font-size: 2.2dvmin;
+    font-size: min(12px,  2.2dvmin);
   }
 }
